refactoring of files

--- a/sprint0/userDocs/ParkManagerService.html
+++ b/sprint0/userDocs/ParkManagerService.html
@@ -601,7 +601,7 @@
 
 		<img style="max-width: 100%" src="img/logical-architecture-requirements.png" alt="logical architecture">
 
-		For the sake of completeness, we also provided a machine-readable <a href="model-requirements.qak">model</a>,
+		For the sake of completeness, we also provided a machine-readable <a href="../src/model-requirements.qak">model</a>,
 		which highlights only the core aspects of the system, namely, the park phase and the pick-up phase.
 	</div>
 
@@ -677,7 +677,7 @@
 
 
 		<br>
-		It is also available an executable model of the system written in <a href="model.qak">qak language</a>.
+		It is also available an executable model of the system written in <a href="../src/model.qak">qak language</a>.
 	</div>
 
 	<h2>Test plans</h2>
