--- a/sprint0/userDocs/ParkManagerService.html
+++ b/sprint0/userDocs/ParkManagerService.html
@@ -753,8 +753,6 @@
 					<br/><b>Conditions</b>
 					<ul>
 						<li>The transport trolley moves around the parking-area and arrives in the desired location</li>
-						<li>The INDOOR-area is freed</li> <!-- ??? -->
-						<li></li>
 					</ul>
 				</td>
 			</tr>
@@ -847,9 +845,11 @@
 
 	<h2>Project</h2>
 	<div class="remark">
-		The project will be divided in sprint
+		The project will be divided in sprint.<br>
 
+		<a href="../../sprint1/userDocs/Sprint1.html">Sprint 1</a><br>
 
+		<a href="../../sprint2/userDocs/Sprint2.html">Sprint 2</a>
 	</div>
 
 	<h2>Testing</h2>
