--- a/sprint1/userDocs/Sprint1.html
+++ b/sprint1/userDocs/Sprint1.html
@@ -202,7 +202,7 @@
 		In this first sprint, we will focus on the parking and pick-up logic, without considering the GUI and the trolley,
 		which will be mocked.
 		Below is reported the full list of requirements which will be covered:<br/>
-		<ul>
+		<ul class="requirementsList">
 			<li>The system sends the client an id of the parking-slot if there are slots available, otherwise it sends 0 (<k>F2</k>)</li>
 			<li>The client notifies the ParkManagerService when he leaves the car in front of the INDOOR (<k>F3</k>)</li>
 			<li>The system should provide a unique identifier to the client (TOKENID), in order to retrieve the car later (<k>F5</k>)</li>
@@ -229,7 +229,6 @@
 		Considering the requirements listed in the sprint backlog, in this sprint we will cover only the ParkingService.
 
 		<h3>ParkingService</h3>
-		<!-- Moore finite state machine -->
 		As the actors we have been using are based on the concept of <a href="https://htmlpreview.github.io/?https://github.com/anatali/issLab2021/blob/master/it.unibo.qakactor/userDocs/LabQakIntro2021.html">QActor</a>
 		provided by the customer, we can express the ParkingService behavior as a Moore State Machine. <br/>
 
@@ -244,11 +243,6 @@
 
 		<br><br>
 		<img src="img/ParkingServiceFSM.png" style="max-width: 95%" alt="ParkingService FSM">
-		<!-- UML graph, with explanation for the classes and interaction -->
-
-		<!-- reserved, poichè posso gestire due handleRequest contemporaneamente devo distinguere tra occpuato e riservato
-		in quanto in carEnter per entrare devo specificare il posto (aggiungere un token personale per evitare manomissioni?-->
-
 
 
 		<h3>State Representation</h3>
@@ -277,19 +271,18 @@
 			</tr>
 		</table>
 
-		<!-- h3 Interaction with the qactor (sia i messaggi che adesso inviamo ai qak che il fatto che poi le richieste adesso inviate
-		dai test verranno inviate dallo spring) -->
+
 		<h3>Interaction with Qactor</h3>
 
 		The qak model is configured to listen for messages on port 8050. The customer already provided us with some classes
 		to use for the communication with the qactor. They can be found, together with some other classes we introduce,
 		reported below.
 
-		<!-- grafico -->
+		<img src="img/InteractionUML.png" alt="Interaction with QActor in UML" style="max-width: 100%"><br>
 
 		We defined a set of messages that the actors use to communicate.
 
-		The <k>parkingservice</k> actor listens for the following messages:
+		The <k>parkingservice</k> actor listens for the following messages:<br><br>
 		<table>
 			<thead>
 			<tr>
@@ -435,4 +428,13 @@
 	GitHub: <a style="color: white" href="https://github.com/giuliotripi/ParkManagerService">https://github.com/giuliotripi/ParkManagerService</a>
 </div>
 </body>
+<script type="application/javascript">
+	let requirements = document.querySelectorAll('ul.requirementsList  > li > k');
+	console.log(requirements.length)
+	for (let i = 0; i < requirements.length; i++) {
+		let req = requirements[i].innerHTML;
+		requirements[i].innerHTML = "<a href='../../sprint0/userDocs/ParkManagerService.html#" + req + "'>" + req + "</a>";
+	}
+
+</script>
 </html>
