--- a/sprint1/userDocs/Sprint1.html
+++ b/sprint1/userDocs/Sprint1.html
@@ -411,12 +411,26 @@
 	<h2>Testing</h2>
 	<div class="remark">
 		Since we still did not implement the web part, our testing remained similar to what we prevented in the Test Plan
-		part of <a href="../src/kotlinCode/eu/musarellatripi/test/TestPlan0.kt">sprint0</a>.<br><br>
+		part of <a href="../test/eu/musarellatripi/test/TestPlan0.kt">sprint0</a>.<br><br>
 
 		It was added a test to check that the mock sensors were working storing the value sent by the testing code.
-		And another test (<a href="../src/kotlinCode/eu/musarellatripi/test/TestDB.kt">TestDB</a>) to check that the
+		And another test (<a href="../test/eu/musarellatripi/test/TestDB.kt">TestDB</a>) to check that the
 		persistence has the correct number of records and that the update function works well.<br><br>
 
+	</div>
+
+	<h2>Execution</h2>
+	<div class="remark">
+		In order to let the customer test the application, two gradle tasks were created:
+		<ul>
+			<li><k>run</k>: to start the service server</li>
+			<li><k>client</k>: to start the client</li>
+		</ul>
+		In addition, a utility was created to run the application quickly. It is just necessary to go to the sprint1
+		folder and run
+		<pre>./execute.bat &lt;taskname&gt;</pre>
+		or, on Linux
+		<pre>./execute.sh &lt;taskname&gt;</pre>
 	</div>
 
 
