--- a/sprint0/userDocs/ParkManagerService.html
+++ b/sprint0/userDocs/ParkManagerService.html
@@ -321,6 +321,9 @@
 				his mind and does not park in the parking area;</li>
 			<li>It is impossible that a customer reserves a parking slot and do not show up at the parking area;</li>
 			<li>When client try to do acceptIN or acceptOUT, if the transport trolley is stopped, the client should see an error message;</li>
+			<li>When parking manager stops the transport trolley, the transport trolley won't accept further commands
+				but finishes the move it was doing (e.g. if it is going to the INDOOR area, it reaches the INDOOR and
+				then stops accepting other requests);</li>
 			<li>When parking manager starts the transport trolley, it should continue the move it was doing before stop;</li>
 			<li>Temperature is in Celsius and mass in kilograms;</li>
 			<li>TMAX and DTFREE will be placed in a configuration file accessible by the application;</li>
@@ -352,14 +355,13 @@
 				application stating that another client is in the parking phase or car pickup phase and that his
 				request is in queue. The request will be served when the previous ends.</li>
 			<li>Afterwards, Client3 wants to enter his auto in the parking-area but receive a notice message from the
-				application stating that another client is in the parking phase or car pickup phase and that the web page
-				will reload automatically as soon as the system is available again.</li>
+				application stating that another client is in the parking phase or car pickup phase and that his
+				request is in queue. The request will be served when the previous ends.</li>
+			<li>Client4 </li>
 			<li>Client2 and Client3 remain waiting.</li>
 			<li>Client1 finish his parking phase.</li>
 			<li>Without further interaction by Client2, ParkManagerService fulfills his request.</li>
-			<li>The application of Client3 notify him that it is now possible to try to start the parking phase.
-				At this point Client3 notify his interest in entering his auto again as if it was just arrived, without
-				record of his waiting. There is not a queue of parking request but just an event of finish of the previous one.</li>
+			<li>Without further interaction by Client3, ParkManagerService fulfills his request.</li>
 		</ol>
 		<ks>User tries to enter while the trolley is stopped</ks><br>
 		<ol>
