--- a/sprint1/userDocs/Sprint1.html
+++ b/sprint1/userDocs/Sprint1.html
@@ -283,7 +283,7 @@
 
 		The qak model is configured to listen for messages on port 8050. The customer already provided us with some classes
 		to use for the communication with the qactor. They can be found, together with some other classes we introduce,
-		reported below.
+		reported below.<br><br>
 
 		<img src="img/InteractionUML.png" alt="Interaction with QActor in UML" style="max-width: 100%"><br>
 
