added motivation for the coap choice

--- a/sprint0/userDocs/ParkManagerService.html
+++ b/sprint0/userDocs/ParkManagerService.html
@@ -667,7 +667,8 @@
 		and it could communicate with the devices over a private network non-accessible by other devices, thus not requiring encryption.<br>
 		In this case, the Service has to be located in the neighborhood of all the sensors, while with encryption it
 		could be located everywhere and provide his services with a reduced risk of in-place maintenance.<br>
-		At this point, the two main alternatives are CoAP and WebSockets.
+		At this point, the two main alternatives are CoAP and WebSockets. We will use CoAP because it is lighter and
+		already integrated with the modelling language qak provided by the customer.
 		<br><br>
 
 		<h3>GUI interaction</h3>
